--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/sesion-persona/sesion-persona.component.html
@@ -15,12 +15,12 @@
          
           <div>
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc" [(ngModel)]="numero_documento" placeholder="Ej.:15234687">
           </div>
     
         <div>
           <label for="contraseña">CONTRASEÑA</label>
-          <input type="text" id="contraseña" name="contraseña" placeholder="">
+          <input type="text" id="contraseña" name="contraseña" [(ngModel)]="contrasena" placeholder="">
           <a style="text-align:left" href="#"></a>
         </div>
     
@@ -29,7 +29,7 @@
         </div>
         
         <div>
-          <button class="buttonSiguiente" disabled>Ingresar</button>    
+          <button class="buttonSiguiente" (click)="iniciarSesionPersonaNatural()">Ingresar</button>    
         </div>
   
         <div class="center">
