--- a/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
+++ b/Prod.ComponenteLoginAngular.MVC/ClientApp/src/app/registro-empresa/registro-empresa.component.html
@@ -25,17 +25,17 @@
   
       <div>
           <label for="ruc">RUC</label>
-          <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872">
+          <input type="text" id="ruc" name="ruc" placeholder="Ej.:10152346872" maxlength="11" (keypress)="restrictNumeric($event)">
        </div>
       
        <div>
         <label for="apellidos">RAZÓN SOCIAL</label>
-        <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
+        <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" maxlength="100">
       </div>
 
       <div>
         <label for="nombres">DIRECCIÓN</label>
-        <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila">
+        <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" maxlength="100">
       </div>
 
       <div>
@@ -62,18 +62,18 @@
           </div>        
           <div class="right">
               <label for="numeroDoc">NÚMERO DOCUMENTO</label>
-              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687">
+              <input type="text" id="numeroDoc" name="numeroDoc" placeholder="Ej.:15234687" (keypress)="restrictNumeric($event)">
           </div>
       </div>
   
         <div>
           <label for="apellidos">APELLIDOS</label>
-          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez">
+          <input type="text" id="apellidos" name="apellidos" placeholder="Ejm:Flores Sánchez" maxlength="100">
         </div>
   
         <div>
           <label for="nombres">NOMBRES</label>
-          <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila">
+          <input type="text" id="nombres" name="nombres" placeholder="Ej.:Camila" maxlength="100">
         </div>
 
         <div>
@@ -89,17 +89,17 @@
 
         <div>
           <label for="celular">CELULAR</label>
-          <input type="text" id="celular" name="celular" placeholder="Ej.:999123045">
+          <input type="text" id="celular" name="celular" placeholder="Ej.:999123045" (keypress)="restrictNumeric($event)">
         </div>
   
         <div>
           <label for="correo">CORREO</label>
-          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com">
+          <input type="text" id="correo" name="correo" placeholder="Ej.:camila.flores@ejemplo.com" maxlength="100">
         </div>
   
         <div>
           <label for="rep_correo">REPETIR CORREO</label>
-          <input type="text" id="rep_correo" name="rep_correo" placeholder="Ej.:camila.flores@ejemplo.com">
+          <input type="text" id="rep_correo" name="rep_correo" placeholder="Ej.:camila.flores@ejemplo.com" maxlength="100">
         </div>
 
         <div>
